refactor: Use Set.of for readability